Major refactor:  - Added support for stored values and references  - Initial buildout of demo project  - Updated documentation